[gd_scene load_steps=5 format=2]

[ext_resource path="res://creeps/CreepGeneric.gd" type="Script" id=1]
[ext_resource path="res://creeps/sprites/genericcreep.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 2.0

[node name="Creep" type="KinematicBody2D" groups=["creep"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 66
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ChillTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="IsPoisonedTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="ChillTimer" to="." method="_on_chilltimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stuntimer_timeout"]
[connection signal="timeout" from="IsPoisonedTimer" to="." method="_on_ispoisonedtimer_timeout"]
